assets/styles/popup.scss
@import '_font-faces.scss';
html,
body {
  direction: rtl;
  font-family: 'IranSans';
  line-height: 1.7;
  font-size: 13px;
}

body {
  width: 250px;
}

/*FONTS*/

.iran-sans {
  font-family: IRANSans;
}

.iran-sansdn {
  font-family: IRANSansdn;
}

.iran-yekan {
  font-family: IRANYekan;
} 

.iran-sharp {
  font-family: IRANSharp;
}

/*ScrollBar*/

::-webkit-scrollbar {
  width: 5px;
  padding: 5px 5px 5px 0;
}

::-webkit-scrollbar-track {
  border-radius: 3px;
  background: #eaeaea;
}

::-webkit-scrollbar-thumb {
  background: #999;
  border-radius: 5px;
  transition: all ease-out 0.5s;
}

::-webkit-scrollbar-thumb:hover {
  background: #f60c15;
  width: 5px;
}

.logo {
  font-size: 14px;
  width: auto;
  margin-bottom: 35px;
  text-align: center;
  a {
    text-decoration: none;
    color: #666;
  }
  small {
    display: block;
    font-size: 70%;
    color: #666;
    margin-top: -3px;
  }
  span {
    font-size: 20px;
    font-weight: bold;
    strong {
      color: #f60c15;
    }
  }
}

.d-flex {
  display: flex;
  &.flex-column {
    flex-flow: column;
  }
  &.flex-row {
    flex-flow: row;
  }
}

.flex-fill {
  flex: 500;
}

.input-group {
  display: flex;
  flex-flow: row nowrap;
  margin-bottom: 15px;
  input {
    direction: ltr;
    padding: 6px 8px;
    border: 1px solid #eaeaea;
    border-right: 0;
    flex: 1;
    transition: all ease-out 0.5s;
    &:focus {
      outline: none;
      border: 1px solid #f60c15;
    }
  }
  input::-webkit-input-placeholder {
    color: #cacaca;
  }
  button {
    -webkit-appearance: none;
    border: 1px solid #f60c15;
    border-left: 0;
    background-color: #f60c15;
    font-size: 1.5em;
    color: white;
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
    padding: 0 7px 0 10px;
    cursor: pointer;
    &:hover {
      background-color: #f60c15b0;
    }
  }
  span {
    display: flex;
    align-items: center;
    background-color: #eaeaea;
    border-top-left-radius: 3px;
    border-bottom-left-radius: 3px;
    white-space: nowrap;
    padding: 0 2px;
    direction: ltr;
    color: #b5b5b5;
  }
}

[ng-click] {
  cursor: pointer;
}

.setting-options {
  transition: height ease-out 0.5s;
  height: 0;
  overflow: hidden;
  &.expanded {
    height: auto;
    padding: 5px 10px;
  }
}

.setting-tab {
  margin-bottom: 2px;
  border: 1px solid #eee;
  border-radius: 3px;
  .setting-title {
    padding: 6px 5px 0;
    background-color: #f1f1f1;
    display: flex;
    direction: ltr;
    &:hover {
      background-color: darken($color: #f1f1f1, $amount: 10%);
    }
  }
}

.form-group {
  display: flex;
  align-items: center;
  width: 100%;
  margin-bottom: 2px;
  input {
    border: 1px solid #eaeaea;
    border-radius: 3px;
    padding: 5px 6px;
    flex: 1;
    margin-right: 5px;
  }
}

input[type="checkbox"] {
  position: relative;
  :before {
    position: absolute;
    left: 0;
    top: 0;
    width: 50;
    height: 50;
    background-color: #eaeaea;
    border-radius: 2px;
    content: "";
  }
  :after {
    position: absolute;
    left: 0;
    top: 0;
    width: 50;
    height: 50;
    background-color: #eaeaea;
    border-radius: 2px;
    content: "";
  }
}

#addCurrent {
  width: 100%;
  margin-bottom: 3px;
  border-radius: 3px;
  border: none;
  background: #d4d4d4;
  color: black;
  font-family: IRANYekan, IRANSharp, IRANSans, IRANSansDn, 'Segoe UI', roboto, Tahoma, Geneva, Verdana, sans-serif;
  direction: ltr;
  padding: 5px 0;
}

